--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
     "mobx-react": "^4.4.1",
     "mobx-state-tree": "^1.3.1",
     "react": "^16.2.0",
-    "react-app-rewire-mobx": "^1.0.7",
-    "react-app-rewired": "^1.4.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "mobx-devtools-mst": "^0.9.9"
